tests/paczka1/fuzzy1/70361039.err
Error in line 9: QgkO A653 3,4
Error in line 12: QgkO A596 14,6
Error in line 6: 9mPS1f9RJ A363 86,4
Error in line 14: 9mPS1f9RJ A587 87,5
Error in line 19: 9mPS1f9RJ A363 12,2
Error in line 20: 7Z1q A363 14,0
Error in line 23: 7Z1q A587 18,7
Error in line 28: jAHbrhVlHG A587 327,4
Error in line 24: 7Z1q A596 90,3
Error in line 13: QgkO A363 91,7
Error in line 38: 1Ib A596 48,7
